# OTA_DEMO

./: .gitignore  CMakeLists.txt  partitions.csv
main/: CMakeLists.txt  app_http_server.c  app_http_server.h  app_main.c  core_ota.c  core_ota.h  core_wifi_sta.c  core_wifi_sta.h
webpages/ota/: ota.html
